2009-04-02  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Timothy Hatcher.

        https://bugs.webkit.org/show_bug.cgi?id=25010
        Refactor InspectorController to replace all JS function invocations with
        ScriptFunctionCall.

        * bindings/js/ScriptFunctionCall.cpp:
        (WebCore::ScriptFunctionCall::appendArgument): Added int, UString,
            and JSValuePtr methods.
        (WebCore::ScriptFunctionCall::call): Added simplified, exception-eating
            method.
        * bindings/js/ScriptFunctionCall.h: Decls for above.
        * bindings/js/ScriptObjectQuarantine.cpp: Added helper for Node and DOMWindow.
        (WebCore::getQuarantinedScriptObject):
        * bindings/js/ScriptObjectQuarantine.h: Decls for above.
        * inspector/InspectorController.cpp:
        (WebCore::callSimpleFunction): Made into a static.
        (WebCore::InspectorController::focusNode): Refactored to use ScriptFunctionCall.
        (WebCore::InspectorController::toggleRecordButton): Ditto.
        (WebCore::InspectorController::startGroup): Ditto.
        (WebCore::InspectorController::setAttachedWindow): Ditto.
        (WebCore::InspectorController::inspectedWindowScriptObjectCleared): Ditto.
        (WebCore::InspectorController::addScriptProfile): Ditto.
        (WebCore::InspectorController::didParseSource): Ditto.
        (WebCore::InspectorController::failedToParseSource): Ditto.
        (WebCore::InspectorController::didPause): Ditto.
        * inspector/InspectorController.h: Removed callFunction and callSimpleFunction
            decls.

2009-04-02  Jian Li  <jianli@chromium.org>

        Reviewed by Darin Fisher.

        Upstream changes to V8WorkerContextEventListener for V8 bindings.
        https://bugs.webkit.org/show_bug.cgi?id=25007

        * bindings/v8/V8ObjectEventListener.h:
        * bindings/v8/V8WorkerContextEventListener.cpp:

2009-04-02  Jian Li  <jianli@chromium.org>

        Reviewed by Darin Fisher.
